trunk/Archive2/67/13577fa26a2e46/output
main.cpp:9:11: error: called object type 'auto' is not a function or function pointer
    f<int>();
    ~~~~~~^
1 error generated.
